--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Bootstrap icons-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
-        <!-- Core theme CSS (includes Bootstrap)-->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Comforter&family=Fuzzy+Bubbles:wght@700&display=swap" rel="stylesheet">
         <link href="css/styles.css" rel="stylesheet" />
         <link rel="stylesheet" href="css\estilos.css"/>
     </head>
@@ -18,13 +20,15 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container px-4 px-lg-5">
-                <a class="navbar-brand" href="#!">Vivero Simon</a>
+                <a id="tituloHeader" class="navbar-brand" href="#!" >Vivero Simón</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="#!">Inicio</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#!">Contacto</a></li>
-                        <li class="nav-item dropdown">
+                <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+                    <ul class="navbar-nav  mb-2 mb-lg-0 ms-lg-4 justify-content-end" style="margin: 0;">
+                        <li class="nav-item"><a class="nav-link itemsNav" aria-current="page" href="#!">Inicio</a></li>
+                        <li class="nav-item"><a class="nav-link itemsNav" href="#!">Contacto</a></li>
+                        <li class="nav-item"><a class="nav-link itemsNav" href="#sectionProductos">Productos</a></li>
+
+                        <!-- <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Productos</a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <li><a class="dropdown-item" href="#!">Todos los productos</a></li>
@@ -32,15 +36,15 @@
                                 <li><a class="dropdown-item" href="#!">Productos populares</a></li>
                                 <li><a class="dropdown-item" href="#!">Nuevos productos</a></li>
                             </ul>
-                        </li>
+                        </li> -->
                     </ul>
-                    <form class="d-flex">
+                    <!-- <form class="d-flex">
                         <button class="btn btn-outline-dark" type="submit">
                             <i class="bi-cart-fill me-1"></i>
                             Cart
                             <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
                         </button>
-                    </form>
+                    </form> -->
                 </div>
             </div>
         </nav>
@@ -54,10 +58,10 @@
             </div>
         </header>
         <!-- Section-->
-        <section class="py-5 bg-green">
+        <section id="sectionProductos" class="py-5 bg-green">
             <div class="container px-4 px-lg-5 mt-5">
                 <div id="containerProductos" class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
-                    
+
                 </div>
             </div>
         </section>
