[UPLOAD] optimizado de imagenes

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <header class="py-5" id="header">
             <div class="container px-4 px-lg-5 my-5">
                 <div class="text-center text-gray">
-                    <h1 class="display-4 fw-bolder">Decora tu Jardín</h1>
+                    <h1 class="display-4 fw-bolder">Decorá tu Jardín</h1>
                     <p class="lead fw-normal text-gray mb-0">Plantas para interior y exterior</p>
                 </div>
             </div>
