--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                     <ul class="navbar-nav  mb-2 mb-lg-0 ms-lg-4 justify-content-end" style="margin: 0;">
                         <li class="nav-item"><a class="nav-link itemsNav" aria-current="page" href="#!">Inicio</a></li>
-                        <li class="nav-item"><a class="nav-link itemsNav" href="#!">Contacto</a></li>
+                        <!-- <li class="nav-item"><a class="nav-link itemsNav" href="#!">Contacto</a></li> -->
                         <li class="nav-item"><a class="nav-link itemsNav" href="#sectionProductos">Productos</a></li>
 
                         <!-- <li class="nav-item dropdown">
