--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                     <ul class="navbar-nav  mb-2 mb-lg-0 ms-lg-4 justify-content-end" style="margin: 0;">
-                        <li class="nav-item"><a class="nav-link itemsNav" aria-current="page" href="#!">Inicio</a></li>
-                        <!-- <li class="nav-item"><a class="nav-link itemsNav" href="#!">Contacto</a></li> -->
+                        <li class="nav-item"><a class="nav-link itemsNav" aria-current="page" href="">Inicio</a></li>
+                        <li class="nav-item"><a class="nav-link itemsNav" href="https://wa.me/+5492616351701" target="blank">Contacto</a></li>
                         <li class="nav-item"><a class="nav-link itemsNav" href="#sectionProductos">Productos</a></li>
 
                         <!-- <li class="nav-item dropdown">
@@ -67,7 +67,7 @@
         </section>
         <!-- Footer-->
         <footer class="py-5 bg-dark">
-            <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2021</p></div>
+            <div class="container"><p class="m-0 text-center text-white">Copyright &copy; SimonDeveloper 2021</p></div>
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
